2010-05-27  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py (_id): Handle more than 26 objects (more than (255
	- ord('A')) to be precise).

2010-05-25  Miloslav Trmač  <mitr@redhat.com>

	* src/server.py (ServerConfiguration._add_defaults): New option
	signing-timeout.
	(ServerConfiguration._read_configuration): Handle signing-timeout.
	(SigningContext.sign_rpm): Catch pexpect exceptions.  Use
	signing-timeout.  New parameter config.  All callers changed.
	(SignRPMsSignerThread.__init__): New parameter config.  Caller changed.
	* config/server.conf (bridge-hostname): Document signing-timeout.

	* src/utils.py (_derivation_counter_1): New definition.
	(derived_key): New function.
	(SHA512HashAndHMACReader, WorkerThread): New classes.
	(run_worker_threads, log_exception): New functions.
	* src/double_tls.py (DoubleTLSClient.outer_shutdown)
	(OuterBuffer.set_full_duplex): New methods.
	* src/bridge.py (BridgeConfiguration._add_defaults): New option
	max-rpms-payload-size.
	(BridgeConfiguration._read_configuration): Handle max-rpms-payload-size.
	(RequestType.__init__): Add support for subheaders.
	(RequestType.post_request_phase): New method.
	(SubrequestMap, SignRPMsReadRequestThread, SignRPMsKojiThread)
	(SignRPMsSendRequestThread, SignRPMsReadReplyThread)
	(SignRPMsSendReplyThread, SignRPMsRequestType): New classes.
	(request_types): Add 'sign-rpms'.
	(SF): Unset after last use.
	(handle_connection): Call RequestType.post_request_phase().  New
	parameter config.  All callers changed.
	* src/client.py (MAX_SIGN_RPMS_PAYLOAD_SIZE): New definition.
	(ClientsConnection.__send_payload_size)
	(ClientsConnection.__send_payload_from_file): Document that these
	methods are suitable both for the primary payload and subpayloads.
	(ClientsConnection.send_subheader)
	(ClientsConnection.send_empty_subpayload)
	(ClientsConnection.read_subheader)
	(ClientsConnection.read_empty_subpayload)
	(ClientsConnection.write_subpayload_to_file)